@@ -22,7 +22,7 @@ void tp_compiler(TP) {
     tp_import(tp,0,"parse",tp_parse);
     tp_import(tp,0,"encode",tp_encode);
     tp_import(tp,0,"py2bc",tp_py2bc);
-    tp_call(tp,"py2bc","_init",tp_None);
+    tp_ez_call(tp,"py2bc","_init",tp_None);
 }
 #else
 void tp_compiler(TP) { }
